Bug 1404801 - Part 5: Show error message in case of no animations. r=gl
MozReview-Commit-ID: 538oUjKMsnT

UltraBlame original commit: 79a0e0e9ebcd5790b18c89bf36fd86b52ee32bc0

--- a/devtools/client/themes/animation.css
+++ b/devtools/client/themes/animation.css
@@ -21,6 +21,33 @@ rgba
 05
 )
 ;
+-
+-
+command
+-
+pick
+-
+image
+:
+url
+(
+chrome
+:
+/
+/
+devtools
+/
+skin
+/
+images
+/
+command
+-
+pick
+.
+svg
+)
+;
 }
 :
 root
@@ -47,6 +74,43 @@ rgba
 0
 .
 05
+)
+;
+}
+:
+root
+.
+theme
+-
+firebug
+{
+-
+-
+command
+-
+pick
+-
+image
+:
+url
+(
+chrome
+:
+/
+/
+devtools
+/
+skin
+/
+images
+/
+firebug
+/
+command
+-
+pick
+.
+svg
 )
 ;
 }
@@ -113,6 +177,60 @@ even
 background
 -
 color
+)
+;
+}
+.
+animation
+-
+error
+-
+message
+{
+overflow
+:
+auto
+;
+}
+.
+animation
+-
+error
+-
+message
+>
+p
+{
+white
+-
+space
+:
+pre
+;
+}
+.
+animation
+-
+element
+-
+picker
+:
+:
+before
+{
+background
+-
+image
+:
+var
+(
+-
+-
+command
+-
+pick
+-
+image
 )
 ;
 }
