Bug 1360457 - moved header into content, created wrapper around header, adapted css, fixed an old test, created new regression test. r=ntim,rickychien Post-review fixes applied x2
MozReview-Commit-ID: AXNQFZC3fih

UltraBlame original commit: 91de4b003648b47cb5541dd81e5b88f07980b174

--- a/devtools/client/netmonitor/src/assets/styles/netmonitor.css
+++ b/devtools/client/netmonitor/src/assets/styles/netmonitor.css
@@ -1248,17 +1248,6 @@ margin
 :
 0
 ;
-padding
-:
-12px
-;
-font
--
-size
-:
-120
-%
-;
 flex
 :
 1
@@ -1266,6 +1255,40 @@ flex
 overflow
 :
 auto
+;
+}
+.
+empty
+-
+notice
+-
+element
+{
+padding
+-
+top
+:
+12px
+;
+padding
+-
+left
+:
+12px
+;
+padding
+-
+right
+:
+12px
+;
+font
+-
+size
+:
+1
+.
+2rem
 ;
 }
 .
@@ -1632,6 +1655,39 @@ requests
 list
 -
 headers
+-
+wrapper
+{
+position
+:
+sticky
+;
+top
+:
+0
+;
+z
+-
+index
+:
+1000
+;
+width
+:
+100
+%
+;
+padding
+:
+0
+;
+}
+.
+requests
+-
+list
+-
+headers
 {
 display
 :
@@ -1648,6 +1704,11 @@ height
 padding
 :
 0
+;
+width
+:
+100
+%
 ;
 }
 .
@@ -4326,6 +4387,10 @@ list
 -
 item
 {
+position
+:
+relative
+;
 display
 :
 table
