--- a/browser/themes/shared/urlbar-searchbar.inc.css
+++ b/browser/themes/shared/urlbar-searchbar.inc.css
@@ -1275,6 +1275,13 @@ urlbar
 -
 icon
 :
+not
+(
+[
+disabled
+]
+)
+:
 hover
 .
 urlbar
@@ -1282,6 +1289,13 @@ urlbar
 icon
 -
 wrapper
+:
+not
+(
+[
+disabled
+]
+)
 :
 hover
 {
@@ -1321,6 +1335,13 @@ open
 urlbar
 -
 icon
+:
+not
+(
+[
+disabled
+]
+)
 :
 hover
 :
