Backed out 2 changesets (bug 1412170) for eslint bustage
Backed out changeset a9a646fe54ec (bug 1412170)
Backed out changeset 8b46ed411edf (bug 1412170)

MozReview-Commit-ID: Et3MnX3ieBe

UltraBlame original commit: cd2a0ae1352716b1451c489d0757898bae4d1e47

--- a/browser/base/content/browser.css
+++ b/browser/base/content/browser.css
@@ -8881,6 +8881,32 @@ inherit
 ;
 }
 }
+.
+urlbar
+-
+page
+-
+action
+[
+disabled
+]
+{
+pointer
+-
+events
+:
+none
+;
+-
+moz
+-
+user
+-
+focus
+:
+ignore
+;
+}
 #
 sidebar
 -
