Bug 1398103 - Adjust toolbar and toolbar button spacing to match photon spec. r=daleharvey
MozReview-Commit-ID: CzvlxUprMKL

UltraBlame original commit: afc2cbb9370f0d83bd5e64ea2477f917b0339926

--- a/browser/themes/linux/browser.css
+++ b/browser/themes/linux/browser.css
@@ -458,6 +458,18 @@ navigator
 toolbox
 >
 toolbar
+{
+padding
+:
+0
+;
+}
+#
+navigator
+-
+toolbox
+>
+toolbar
 :
 not
 (
@@ -580,24 +592,6 @@ border
 position
 :
 relative
-;
-}
-#
-nav
--
-bar
-{
-padding
--
-top
-:
-2px
-;
-padding
--
-bottom
-:
-2px
 ;
 }
 #
@@ -3192,10 +3186,6 @@ TabsToolbar
 min
 -
 height
-:
-0
-;
-padding
 :
 0
 ;
