Bug 1412245 - Replace --tab-toolbar-navbar-overlap variable with preprocessor directive. r=daleharvey
MozReview-Commit-ID: 52MHjqEMwyI

UltraBlame original commit: 919fd0a3bad512a682495deefae6baf083fd699c

--- a/browser/themes/shared/tabs.inc.css
+++ b/browser/themes/shared/tabs.inc.css
@@ -29,18 +29,6 @@ width
 -
 tab
 -
-toolbar
--
-navbar
--
-overlap
-:
-1px
-;
--
--
-tab
--
 min
 -
 height
@@ -3060,18 +3048,7 @@ calc
 -
 1px
 -
-var
-(
--
--
-tab
--
-toolbar
--
-navbar
--
-overlap
-)
+navbarTabsShadowSize
 )
 transparent
 calc
@@ -3081,18 +3058,7 @@ calc
 -
 1px
 -
-var
-(
--
--
-tab
--
-toolbar
--
-navbar
--
-overlap
-)
+navbarTabsShadowSize
 )
 )
 ;
@@ -4208,18 +4174,7 @@ calc
 -
 4px
 +
-var
-(
--
--
-tab
--
-toolbar
--
-navbar
--
-overlap
-)
+navbarTabsShadowSize
 )
 ;
 background
@@ -4697,18 +4652,7 @@ margin
 -
 bottom
 :
-var
-(
--
--
-tab
--
-toolbar
--
-navbar
--
-overlap
-)
+navbarTabsShadowSize
 ;
 opacity
 :
