--- a/browser/themes/linux/browser.css
+++ b/browser/themes/linux/browser.css
@@ -561,24 +561,8 @@ box
 shadow
 :
 0
-calc
-(
 -
-1
-*
-var
-(
--
--
-tab
--
-toolbar
--
-navbar
--
-overlap
-)
-)
+navbarTabsShadowSize
 0
 var
 (
