--- a/browser/themes/osx/browser.css
+++ b/browser/themes/osx/browser.css
@@ -906,24 +906,8 @@ box
 shadow
 :
 0
-calc
-(
 -
-1
-*
-var
-(
--
--
-tab
--
-toolbar
--
-navbar
--
-overlap
-)
-)
+navbarTabsShadowSize
 0
 var
 (
@@ -1050,24 +1034,8 @@ box
 shadow
 :
 0
-calc
-(
 -
-1
-*
-var
-(
--
--
-tab
--
-toolbar
--
-navbar
--
-overlap
-)
-)
+navbarTabsShadowSize
 0
 var
 (
