Backed out changeset afc2cbb9370f (bug 1398103) for unexpected network connection in wpt2 /css/css-tables-3/table-model-fixup-2.html r=backout on CLOSED TREE
UltraBlame original commit: c99501471321aa32047b23a26734212e1ceae4cc

--- a/browser/themes/linux/browser.css
+++ b/browser/themes/linux/browser.css
@@ -458,18 +458,6 @@ navigator
 toolbox
 >
 toolbar
-{
-padding
-:
-0
-;
-}
-#
-navigator
--
-toolbox
->
-toolbar
 :
 not
 (
@@ -576,6 +564,24 @@ border
 position
 :
 relative
+;
+}
+#
+nav
+-
+bar
+{
+padding
+-
+top
+:
+2px
+;
+padding
+-
+bottom
+:
+2px
 ;
 }
 #
@@ -3170,6 +3176,10 @@ TabsToolbar
 min
 -
 height
+:
+0
+;
+padding
 :
 0
 ;
