--- a/browser/themes/shared/toolbarbuttons.inc.css
+++ b/browser/themes/shared/toolbarbuttons.inc.css
@@ -17,16 +17,6 @@ duration
 -
 toolbarbutton
 -
-outer
--
-padding
-:
-2px
-;
--
--
-toolbarbutton
--
 inner
 -
 padding
@@ -164,11 +154,11 @@ compact
 -
 toolbarbutton
 -
-outer
+inner
 -
 padding
 :
-1px
+5px
 ;
 }
 :
@@ -741,16 +731,7 @@ margin
 padding
 :
 0
-var
-(
--
--
-toolbarbutton
--
-outer
--
-padding
-)
+2px
 ;
 -
 moz
@@ -762,17 +743,6 @@ pack
 center
 ;
 }
-:
-root
-:
-not
-(
-[
-uidensity
-=
-compact
-]
-)
 #
 PanelUI
 -
@@ -1773,7 +1743,9 @@ inline
 -
 start
 :
-3px
+5px
+!
+important
 ;
 padding
 -
@@ -1935,11 +1907,11 @@ radius
 ;
 width
 :
-34px
+32px
 ;
 padding
 :
-8px
+7px
 ;
 transition
 -
@@ -1988,14 +1960,6 @@ top
 padding
 -
 bottom
-:
-1px
-;
-padding
--
-inline
--
-start
 :
 1px
 ;
