Bug 1405215 - Part 2 - Make new Edit Bookmark dialogue scrollable. r=jwu,nechen
Otherwise
- the keyboard pushes the toolbar with the "Save" button out of view when entering text into the last input field
- the last input field isn't even accessible in landscape orientation.

MozReview-Commit-ID: 98Si6JfLt9m

UltraBlame original commit: 44455b744ee8b02c20d2c07d4b4ee4d50f3c0e77

--- a/mobile/android/app/src/main/res/layout/bookmark_edit_with_full_page.xml
+++ b/mobile/android/app/src/main/res/layout/bookmark_edit_with_full_page.xml
@@ -272,6 +272,23 @@ white
 /
 >
 <
+ScrollView
+android
+:
+layout_width
+=
+"
+match_parent
+"
+android
+:
+layout_height
+=
+"
+match_parent
+"
+>
+<
 LinearLayout
 android
 :
@@ -285,14 +302,7 @@ android
 layout_height
 =
 "
-0dp
-"
-android
-:
-layout_weight
-=
-"
-1
+wrap_content
 "
 android
 :
@@ -966,6 +976,10 @@ TextInputLayout
 <
 /
 LinearLayout
+>
+<
+/
+ScrollView
 >
 <
 /
