Bug 1412504 - update styling for about:devtools;r=nchevobbe
MozReview-Commit-ID: 42Pe9BD7dVa

UltraBlame original commit: 710ce0548f3ac0b5b00df2c430855c115ebed2dd

--- a/devtools/shim/aboutdevtools/aboutdevtools.css
+++ b/devtools/shim/aboutdevtools/aboutdevtools.css
@@ -45,6 +45,17 @@ white
 ffffff
 ;
 }
+p
+{
+line
+-
+height
+:
+1
+.
+5em
+;
+}
 .
 box
 {
@@ -159,18 +170,6 @@ shrink
 ;
 }
 .
-message
-{
-line
--
-height
-:
-1
-.
-6em
-;
-}
-.
 right
 -
 pane
@@ -235,11 +234,23 @@ gap
 ;
 margin
 :
-40px
+60px
+20px
 ;
 padding
 :
 0
+;
+}
+.
+feature
+-
+icon
+{
+width
+:
+55
+%
 ;
 }
 .
@@ -257,6 +268,34 @@ align
 :
 center
 ;
+margin
+:
+10px
+0
+;
+}
+.
+feature
+-
+name
+{
+font
+-
+size
+:
+28px
+;
+font
+-
+weight
+:
+300
+;
+margin
+:
+10px
+0
+;
 }
 .
 feature
@@ -267,6 +306,7 @@ margin
 :
 1em
 20px
+;
 }
 .
 installpage
@@ -274,6 +314,26 @@ installpage
 link
 {
 color
+:
+var
+(
+-
+-
+blue
+-
+60
+)
+;
+-
+moz
+-
+context
+-
+properties
+:
+fill
+;
+fill
 :
 var
 (
@@ -314,8 +374,15 @@ width
 ;
 margin
 :
+-
+.
+3rem
+.
+15rem
 0
-5px
+0
+.
+25rem
 ;
 vertical
 -
@@ -355,27 +422,25 @@ size
 ;
 }
 .
-installpage
--
 title
 {
 font
 -
+weight
+:
+300
+;
+font
+-
 size
 :
-33px
+32px
 ;
 margin
 -
 top
 :
 16px
-;
-font
--
-weight
-:
-300
 ;
 line
 -
