Bug 1412071 - Use --toolbarbutton-border-color instead of removed --toolbarbutton-border. r=Honza
MozReview-Commit-ID: Ffk11BvUSo6

UltraBlame original commit: f0fb92252106b8ba0c998b84c6473dca2565ef30

--- a/devtools/client/jsonview/css/toolbar.css
+++ b/devtools/client/jsonview/css/toolbar.css
@@ -97,6 +97,8 @@ background
 ;
 border
 :
+1px
+solid
 var
 (
 -
@@ -104,6 +106,8 @@ var
 toolbarbutton
 -
 border
+-
+color
 )
 ;
 text
@@ -182,6 +186,8 @@ background
 )
 ;
 border
+-
+color
 :
 var
 (
@@ -192,6 +198,8 @@ toolbarbutton
 hover
 -
 border
+-
+color
 )
 ;
 }
