Bug 1398972 - Replace usage of plugin doorhanger XBL binding r=Felipe
Migrated to simply use PopupNotifications.jsm. Additionally, this
changes the behavior to always have two buttons and a remember
checkbox. When selecting allow with remember, it will behave like
the always allow option previously, but when selecting block with
remember, it will move that page into a quiet mode with respect
to Flash - i.e., no plugin overlays will show anymore, and instead
you will just see the plugin icon in the URL bar, which you can
continue to interact with as before.

MozReview-Commit-ID: EUFlI7nM09t

UltraBlame original commit: 91806d4db6441a4d4c2d7d79867057b996d81631

--- a/toolkit/pluginproblem/content/pluginProblemContent.css
+++ b/toolkit/pluginproblem/content/pluginProblemContent.css
@@ -326,6 +326,18 @@ height
 :
 initial
 ;
+visibility
+:
+hidden
+;
+}
+.
+visible
+{
+visibility
+:
+visible
+;
 }
 .
 mainBox
@@ -357,6 +369,22 @@ closeIcon
 visibility
 :
 visible
+;
+}
+.
+minimal
+>
+.
+hoverBox
+.
+minimal
+>
+.
+closeIcon
+{
+visibility
+:
+hidden
 ;
 }
 .
