--- a/browser/themes/shared/notification-icons.inc.css
+++ b/browser/themes/shared/notification-icons.inc.css
@@ -1748,50 +1748,6 @@ notification
 icon
 [
 popupid
-=
-"
-click
--
-to
--
-play
--
-plugins
-"
-]
-{
-list
--
-style
--
-image
-:
-url
-(
-chrome
-:
-/
-/
-mozapps
-/
-skin
-/
-plugins
-/
-pluginBlocked
-.
-svg
-)
-;
-}
-.
-popup
--
-notification
--
-icon
-[
-popupid
 *
 =
 "
@@ -1872,6 +1828,48 @@ notification
 icons
 /
 plugin
+.
+svg
+)
+;
+transition
+:
+fill
+1
+.
+5s
+;
+}
+.
+plugin
+-
+blocked
+-
+icon
+{
+list
+-
+style
+-
+image
+:
+url
+(
+chrome
+:
+/
+/
+browser
+/
+skin
+/
+notification
+-
+icons
+/
+plugin
+-
+blocked
 .
 svg
 )
