Bug 1413030 - Polish up a few conditions when the customization palette is mostly empty. r=mconley
MozReview-Commit-ID: Gr4sXTZo7pG

UltraBlame original commit: 2bd6fbf4ca88cdebc017e273cfdca3cc79ae5cb8

--- a/browser/themes/shared/customizableui/customizeMode.inc.css
+++ b/browser/themes/shared/customizableui/customizeMode.inc.css
@@ -3604,11 +3604,9 @@ padding
 ;
 }
 #
-ready
+whimsy
 -
-player
--
-one
+button
 {
 list
 -
@@ -3637,11 +3635,9 @@ png
 ;
 }
 #
-ready
+whimsy
 -
-player
--
-one
+button
 >
 .
 button
@@ -3950,4 +3946,100 @@ height
 :
 20px
 ;
+}
+#
+customization
+-
+pong
+-
+arena
+[
+lives
+=
+"
+0
+"
+]
+>
+#
+ball
+{
+animation
+:
+game
+-
+over
+4s
+forwards
+ease
+;
+}
+keyframes
+game
+-
+over
+{
+15
+%
+{
+transform
+:
+scale
+(
+2
+)
+translateY
+(
+-
+10px
+)
+rotateZ
+(
+-
+90deg
+)
+;
+}
+35
+%
+{
+opacity
+:
+1
+;
+}
+65
+%
+{
+opacity
+:
+0
+;
+}
+100
+%
+{
+transform
+:
+scale
+(
+2
+)
+translateY
+(
+300px
+)
+rotateZ
+(
+-
+2
+.
+5turn
+)
+;
+opacity
+:
+0
+;
+}
 }
