Bug 1379686 - Make ForwardingProxyHandler::isConstructor query and return whether the target is a constructor, rather than pretending is-constructor is identical to is-callable.  r=till
UltraBlame original commit: 26b1ee21f3658d945fef274318c0960f54b906c2

--- a/toolkit/components/extensions/test/mochitest/file_permission_xhr.html
+++ b/toolkit/components/extensions/test/mochitest/file_permission_xhr.html
@@ -98,6 +98,69 @@ description
 ;
 }
 function
+assertThrows
+(
+func
+expectedError
+msg
+)
+{
+try
+{
+func
+(
+)
+;
+}
+catch
+(
+e
+)
+{
+assertTrue
+(
+expectedError
+.
+test
+(
+e
+)
+msg
++
+"
+:
+threw
+"
++
+e
+)
+;
+return
+;
+}
+assertTrue
+(
+false
+"
+Function
+did
+not
+throw
+"
++
+"
+expected
+error
+should
+have
+matched
+"
++
+expectedError
+)
+;
+}
+function
 passListener
 (
 )
@@ -167,37 +230,18 @@ finish
 )
 ;
 }
-try
+assertThrows
+(
+function
+(
+)
 {
 new
 privilegedXHR
 (
 )
 ;
-assertTrue
-(
-false
-"
-Content
-should
-not
-have
-access
-to
-privileged
-XHR
-constructor
-"
-)
-;
 }
-catch
-(
-e
-)
-{
-assertTrue
-(
 /
 Permission
 denied
@@ -205,42 +249,48 @@ to
 access
 object
 /
-.
-test
-(
-e
-)
 "
 Content
 should
 not
-have
-access
+be
+allowed
 to
+construct
+a
 privileged
 XHR
 constructor
 "
 )
 ;
-}
-try
+assertThrows
+(
+function
+(
+)
 {
 new
 privilegedFetch
 (
 )
 ;
-assertTrue
-(
-false
+}
+/
+is
+not
+a
+constructor
+/
 "
 Content
 should
 not
-have
-access
+be
+allowed
 to
+construct
+a
 privileged
 fetch
 (
@@ -249,42 +299,6 @@ constructor
 "
 )
 ;
-}
-catch
-(
-e
-)
-{
-assertTrue
-(
-/
-Permission
-denied
-to
-access
-object
-/
-.
-test
-(
-e
-)
-"
-Content
-should
-not
-have
-access
-to
-privileged
-fetch
-(
-)
-constructor
-"
-)
-;
-}
 let
 req
 =
