--- a/devtools/client/debugger/new/debugger.css
+++ b/devtools/client/debugger/new/debugger.css
@@ -2430,7 +2430,7 @@ overflow
 -
 y
 :
-scroll
+auto
 ;
 background
 -
@@ -2488,6 +2488,60 @@ color
 .
 modal
 .
+input
+-
+wrapper
+{
+display
+:
+flex
+;
+justify
+-
+content
+:
+center
+;
+}
+.
+modal
+.
+close
+-
+btn
+{
+padding
+:
+6px
+;
+}
+.
+modal
+.
+result
+-
+list
+{
+height
+:
+calc
+(
+100
+%
+-
+28px
+)
+;
+overflow
+-
+y
+:
+auto
+;
+}
+.
+modal
+.
 entering
 .
 modal
@@ -2499,7 +2553,8 @@ transform
 translateY
 (
 -
-250px
+101
+%
 )
 ;
 }
@@ -4781,12 +4836,6 @@ none
 .
 arrow
 .
-folder
-.
-domain
-.
-file
-.
 worker
 .
 refresh
@@ -4798,6 +4847,29 @@ add
 button
 {
 fill
+:
+var
+(
+-
+-
+theme
+-
+splitter
+-
+color
+)
+;
+}
+.
+file
+.
+folder
+.
+domain
+{
+background
+-
+color
 :
 var
 (
@@ -4848,12 +4920,6 @@ top
 ;
 }
 .
-domain
-svg
-.
-folder
-svg
-.
 worker
 svg
 .
@@ -4873,24 +4939,155 @@ width
 15px
 ;
 }
+img
+.
+domain
+img
+.
+folder
+{
+width
+:
+15px
+;
+height
+:
+15px
+;
+}
+img
+.
+domain
+{
+mask
+:
+url
+(
+"
+chrome
+:
+/
+/
+devtools
+/
+skin
+/
+images
+/
+debugger
+/
+domain
+.
+svg
+"
+)
+no
+-
+repeat
+;
+}
+img
+.
+folder
+{
+mask
+:
+url
+(
+"
+chrome
+:
+/
+/
+devtools
+/
+skin
+/
+images
+/
+debugger
+/
+folder
+.
+svg
+"
+)
+no
+-
+repeat
+;
+}
+img
 .
 file
-svg
 {
+mask
+:
+url
+(
+"
+chrome
+:
+/
+/
+devtools
+/
+skin
+/
+images
+/
+debugger
+/
+file
+.
+svg
+"
+)
+no
+-
+repeat
+;
 width
 :
 13px
 ;
+height
+:
+13px
+;
 }
-.
-file
-svg
+img
 .
 domain
-svg
+img
 .
 folder
-svg
+img
+.
+file
+{
+mask
+-
+size
+:
+100
+%
+;
+margin
+-
+inline
+-
+end
+:
+5px
+;
+display
+:
+inline
+-
+block
+;
+}
 .
 refresh
 svg
@@ -6619,568 +6816,6 @@ height
 ;
 }
 .
-autocomplete
-{
-position
-:
-relative
-;
-width
-:
-100
-%
-;
-height
-:
-100
-%
-;
-}
-.
-autocomplete
-.
-no
--
-result
--
-msg
-{
-color
-:
-var
-(
--
--
-theme
--
-body
--
-color
--
-inactive
-)
-;
-font
--
-size
-:
-24px
-;
-padding
-:
-4px
-;
-word
--
-break
-:
-break
--
-all
-;
-}
-.
-result
--
-list
-{
-list
--
-style
-:
-none
-;
-margin
-:
-0px
-;
-padding
-:
-0px
-;
-overflow
-:
-auto
-;
-width
-:
-calc
-(
-100
-%
--
-1px
-)
-;
-}
-.
-result
--
-list
-.
-big
-{
-max
--
-height
-:
-calc
-(
-100
-%
--
-32px
-)
-;
-}
-.
-result
--
-list
-*
-{
--
-moz
--
-user
--
-select
-:
-none
-;
-user
--
-select
-:
-none
-;
-}
-.
-result
--
-list
-li
-{
-color
-:
-var
-(
--
--
-theme
--
-body
--
-color
-)
-;
-padding
-:
-4px
-13px
-;
-display
-:
-flex
-;
-justify
--
-content
-:
-space
--
-between
-;
-border
-:
-1px
-solid
-transparent
-;
-}
-.
-result
--
-list
-.
-big
-li
-{
-padding
-:
-10px
-;
-flex
--
-direction
-:
-column
-;
-border
--
-bottom
-:
-1px
-solid
-var
-(
--
--
-theme
--
-splitter
--
-color
-)
-;
-}
-.
-result
--
-list
-li
-:
-hover
-{
-background
-:
-var
-(
--
--
-theme
--
-tab
--
-toolbar
--
-background
-)
-;
-}
-.
-result
--
-list
-li
-.
-selected
-{
-border
--
-color
-:
-var
-(
--
--
-theme
--
-selection
--
-background
-)
-;
-}
-.
-result
--
-list
-.
-small
-li
-.
-selected
-{
-background
--
-color
-:
-var
-(
--
--
-theme
--
-selection
--
-background
-)
-;
-color
-:
-white
-;
-}
-.
-theme
--
-dark
-.
-result
--
-list
-.
-small
-li
-.
-selected
-{
-background
--
-color
-:
-var
-(
--
--
-theme
--
-body
--
-background
-)
-;
-}
-.
-theme
--
-dark
-.
-result
--
-list
-li
-:
-hover
-{
-background
-:
-var
-(
--
--
-grey
--
-70
-)
-;
-}
-.
-theme
--
-dark
-.
-result
--
-list
-li
-.
-selected
-{
-background
-:
-var
-(
--
--
-grey
--
-70
-)
-;
-}
-.
-result
--
-list
-li
-.
-title
-{
-line
--
-height
-:
-1
-.
-5em
-;
-word
--
-break
-:
-break
--
-all
-;
-}
-.
-result
--
-list
-li
-.
-selected
-.
-title
-{
-color
-:
-white
-;
-}
-.
-result
--
-list
-.
-big
-li
-.
-selected
-.
-title
-{
-color
-:
-var
-(
--
--
-theme
--
-body
--
-color
-)
-;
-}
-.
-result
--
-list
-.
-big
-li
-.
-subtitle
-{
-word
--
-break
-:
-break
--
-all
-;
-color
-:
-var
-(
--
--
-theme
--
-body
--
-color
--
-inactive
-)
-;
-}
-.
-result
--
-list
-.
-big
-li
-.
-subtitle
-{
-line
--
-height
-:
-1
-.
-5em
-;
-}
-.
-search
--
-bar
-.
-result
--
-list
-li
-.
-selected
-.
-subtitle
-{
-color
-:
-white
-;
-}
-.
-search
--
-bar
-.
-result
--
-list
-{
-border
--
-bottom
-:
-1px
-solid
-var
-(
--
--
-theme
--
-splitter
--
-color
-)
-;
-}
-.
-theme
--
-dark
-.
-result
--
-list
-{
-background
--
-color
-:
-var
-(
--
--
-theme
--
-body
--
-background
-)
-;
-}
-.
 search
 -
 container
@@ -7253,209 +6888,6 @@ overflow
 y
 :
 hidden
-;
-}
-.
-searchinput
--
-container
-{
-display
-:
-flex
-;
-border
--
-bottom
-:
-1px
-solid
-var
-(
--
--
-theme
--
-splitter
--
-color
-)
-;
-}
-.
-theme
--
-dark
-.
-result
--
-list
-li
-.
-subtitle
-{
-color
-:
-var
-(
--
--
-theme
--
-comment
--
-alt
-)
-;
-}
-.
-toggle
--
-search
-{
-background
--
-color
-:
-var
-(
--
--
-theme
--
-toolbar
--
-background
-)
-;
-border
--
-bottom
-:
-1px
-solid
-var
-(
--
--
-theme
--
-splitter
--
-color
-)
-;
-color
-:
-var
-(
--
--
-theme
--
-comment
--
-alt
-)
-;
-display
-:
-flex
-;
-flex
--
-shrink
-:
-0
-;
-justify
--
-content
-:
-flex
--
-start
-;
-line
--
-height
-:
-40px
-;
-padding
-:
-0
-13px
-;
-width
-:
-calc
-(
-100
-%
--
-1px
-)
-;
-}
-.
-toggle
--
-search
-.
-title
-{
-font
--
-weight
-:
-500
-;
-font
--
-size
-:
-120
-%
-;
-}
-.
-toggle
--
-search
-.
-text
-{
-margin
--
-left
-:
-1em
-;
-cursor
-:
-default
-;
-}
-.
-toggle
--
-search
-.
-active
-{
-color
-:
-var
-(
--
--
-theme
--
-selection
--
-background
-)
 ;
 }
 .
@@ -8218,6 +7650,232 @@ color
 ;
 }
 .
+sources
+-
+list
+.
+managed
+-
+tree
+.
+tree
+.
+node
+img
+.
+blackBox
+{
+mask
+:
+url
+(
+"
+chrome
+:
+/
+/
+devtools
+/
+skin
+/
+images
+/
+debugger
+/
+blackBox
+.
+svg
+"
+)
+no
+-
+repeat
+;
+mask
+-
+size
+:
+100
+%
+;
+background
+-
+color
+:
+var
+(
+-
+-
+theme
+-
+highlight
+-
+blue
+)
+;
+width
+:
+13px
+;
+height
+:
+13px
+;
+display
+:
+inline
+-
+block
+;
+margin
+-
+inline
+-
+end
+:
+5px
+;
+margin
+-
+bottom
+:
+-
+2px
+;
+}
+.
+sources
+-
+list
+.
+managed
+-
+tree
+.
+tree
+.
+node
+.
+focused
+img
+.
+blackBox
+{
+background
+-
+color
+:
+white
+;
+}
+.
+theme
+-
+dark
+.
+sources
+-
+list
+.
+managed
+-
+tree
+.
+tree
+.
+node
+:
+not
+(
+.
+focused
+)
+img
+.
+blackBox
+{
+background
+-
+color
+:
+var
+(
+-
+-
+theme
+-
+content
+-
+color3
+)
+;
+}
+.
+theme
+-
+dark
+.
+sources
+-
+list
+.
+managed
+-
+tree
+.
+tree
+.
+node
+img
+.
+blackBox
+{
+background
+-
+color
+:
+var
+(
+-
+-
+theme
+-
+body
+-
+color
+)
+;
+}
+.
+theme
+-
+dark
+.
+sources
+-
+list
+.
+managed
+-
+tree
+.
+tree
+.
+node
+.
+focused
+img
+.
+blackBox
+{
+background
+-
+color
+:
+white
+;
+}
+.
 outline
 {
 overflow
@@ -8553,7 +8211,6 @@ out
 padding
 :
 5px
-5px
 ;
 }
 .
@@ -8832,7 +8489,7 @@ left
 ;
 right
 :
-1px
+0
 ;
 opacity
 :
@@ -9440,9 +9097,9 @@ justify
 -
 content
 :
-space
+flex
 -
-between
+end
 ;
 width
 :
@@ -12792,6 +12449,43 @@ height
 :
 27px
 ;
+-
+-
+debug
+-
+line
+-
+error
+-
+border
+:
+rgb
+(
+255
+0
+0
+)
+;
+-
+-
+debug
+-
+expression
+-
+error
+-
+background
+:
+rgba
+(
+231
+116
+113
+0
+.
+3
+)
+;
 }
 .
 theme
@@ -12904,7 +12598,7 @@ calc
 100
 %
 -
-31px
+29px
 )
 ;
 width
@@ -12914,9 +12608,7 @@ calc
 100
 %
 -
-1
-.
-5px
+1px
 )
 ;
 top
@@ -13349,19 +13041,13 @@ font
 -
 size
 :
-12px
+11px
 ;
 line
 -
 height
 :
-15px
-;
-font
--
-family
-:
-monospace
+14px
 ;
 }
 .
@@ -13500,6 +13186,30 @@ background
 )
 ;
 }
+debug
+-
+expression
+-
+error
+{
+background
+-
+color
+:
+var
+(
+-
+-
+debug
+-
+expression
+-
+error
+-
+background
+)
+;
+}
 .
 new
 -
@@ -13541,6 +13251,76 @@ new
 debug
 -
 line
+.
+CodeMirror
+-
+activeline
+-
+background
+{
+display
+:
+none
+;
+}
+.
+new
+-
+debug
+-
+line
+-
+error
+.
+CodeMirror
+-
+line
+{
+background
+-
+color
+:
+var
+(
+-
+-
+debug
+-
+expression
+-
+error
+-
+background
+)
+!
+important
+;
+outline
+:
+var
+(
+-
+-
+debug
+-
+line
+-
+error
+-
+border
+)
+solid
+1px
+;
+}
+.
+new
+-
+debug
+-
+line
+-
+error
 .
 CodeMirror
 -
@@ -16683,7 +16463,7 @@ end
 :
 0
 .
-7em
+3em
 ;
 }
 .
@@ -16721,6 +16501,38 @@ cursor
 default
 ;
 }
+img
+.
+pause
+img
+.
+stepOver
+img
+.
+stepIn
+img
+.
+stepOut
+img
+.
+resume
+{
+background
+-
+color
+:
+var
+(
+-
+-
+theme
+-
+body
+-
+color
+)
+;
+}
 .
 command
 -
@@ -16728,20 +16540,20 @@ bar
 >
 button
 >
-i
+img
 {
-height
-:
-100
-%
-;
 width
 :
-100
-%
+16px
+;
+height
+:
+16px
 ;
 display
 :
+inline
+-
 block
 ;
 }
@@ -16752,56 +16564,194 @@ bar
 >
 button
 >
-i
->
-svg
-{
-width
-:
-16px
-;
-height
-:
-16px
-;
-}
-.
-command
--
-bar
-button
+img
 .
 pause
--
-exceptions
 {
-margin
--
-inline
--
-start
+mask
 :
-0
+url
+(
+"
+chrome
+:
+/
+/
+devtools
+/
+skin
+/
+images
+/
+debugger
+/
+pause
 .
-5em
+svg
+"
+)
+no
+-
+repeat
 ;
 }
 .
 command
 -
 bar
+>
+button
+>
+img
 .
-subSettings
+stepOver
 {
-float
+mask
 :
-right
+url
+(
+"
+chrome
+:
+/
+/
+devtools
+/
+skin
+/
+images
+/
+debugger
+/
+stepOver
+.
+svg
+"
+)
+no
+-
+repeat
 ;
 }
 .
 command
 -
 bar
+>
+button
+>
+img
+.
+stepIn
+{
+mask
+:
+url
+(
+"
+chrome
+:
+/
+/
+devtools
+/
+skin
+/
+images
+/
+debugger
+/
+stepIn
+.
+svg
+"
+)
+no
+-
+repeat
+;
+}
+.
+command
+-
+bar
+>
+button
+>
+img
+.
+stepOut
+{
+mask
+:
+url
+(
+"
+chrome
+:
+/
+/
+devtools
+/
+skin
+/
+images
+/
+debugger
+/
+stepOut
+.
+svg
+"
+)
+no
+-
+repeat
+;
+}
+.
+command
+-
+bar
+>
+button
+>
+img
+.
+resume
+{
+mask
+:
+url
+(
+"
+chrome
+:
+/
+/
+devtools
+/
+skin
+/
+images
+/
+debugger
+/
+resume
+.
+svg
+"
+)
+no
+-
+repeat
+;
+}
+.
+command
+-
+bar
+>
 button
 .
 pause
@@ -16809,7 +16759,17 @@ pause
 exceptions
 .
 uncaught
+.
+enabled
+>
+img
+.
+pause
+-
+exceptions
 {
+background
+-
 color
 :
 var
@@ -16828,6 +16788,7 @@ purple
 command
 -
 bar
+>
 button
 .
 pause
@@ -16835,7 +16796,17 @@ pause
 exceptions
 .
 all
+.
+enabled
+>
+img
+.
+pause
+-
+exceptions
 {
+background
+-
 color
 :
 var
@@ -16848,6 +16819,105 @@ highlight
 -
 blue
 )
+;
+}
+.
+command
+-
+bar
+>
+button
+.
+pause
+-
+exceptions
+.
+enabled
+>
+img
+.
+pause
+-
+exceptions
+{
+background
+-
+color
+:
+var
+(
+-
+-
+theme
+-
+body
+-
+color
+)
+;
+}
+.
+command
+-
+bar
+>
+button
+>
+img
+.
+pause
+-
+exceptions
+{
+mask
+:
+url
+(
+"
+chrome
+:
+/
+/
+devtools
+/
+skin
+/
+images
+/
+debugger
+/
+pause
+-
+exceptions
+.
+svg
+"
+)
+no
+-
+repeat
+;
+margin
+-
+inline
+-
+start
+:
+0
+.
+2em
+;
+}
+.
+command
+-
+bar
+.
+subSettings
+{
+float
+:
+right
 ;
 }
 .
@@ -17109,7 +17179,7 @@ panes
 {
 overflow
 :
-scroll
+auto
 ;
 display
 :
@@ -17908,6 +17978,24 @@ source
 -
 tab
 :
+first
+-
+child
+{
+margin
+-
+inline
+-
+start
+:
+0
+;
+}
+.
+source
+-
+tab
+:
 hover
 {
 background
@@ -18675,66 +18763,198 @@ top
 ;
 }
 .
-symbol
+result
 -
-modal
--
-wrapper
+list
 {
-position
+list
+-
+style
 :
-fixed
+none
+;
+margin
+:
+0px
+;
+padding
+:
+0px
+;
+overflow
+:
+auto
 ;
 width
-:
-100
-%
-;
-height
-:
-100
-%
-;
-z
--
-index
-:
-9
-;
-}
-.
-symbol
--
-modal
-{
-position
-:
-absolute
-;
-left
 :
 calc
 (
-50
+100
 %
 -
-250px
+1px
 )
 ;
-z
+}
+.
+result
 -
-index
+list
+*
+{
+-
+moz
+-
+user
+-
+select
 :
-10
+none
 ;
-width
+user
+-
+select
 :
-500px
+none
 ;
-height
+}
+.
+result
+-
+list
+li
+{
+color
 :
-230px
+var
+(
+-
+-
+theme
+-
+body
+-
+color
+)
 ;
+padding
+:
+4px
+13px
+;
+display
+:
+flex
+;
+justify
+-
+content
+:
+space
+-
+between
+;
+border
+:
+1px
+solid
+transparent
+;
+}
+.
+result
+-
+list
+.
+big
+li
+{
+padding
+:
+10px
+;
+flex
+-
+direction
+:
+column
+;
+border
+-
+bottom
+:
+1px
+solid
+var
+(
+-
+-
+theme
+-
+splitter
+-
+color
+)
+;
+}
+.
+result
+-
+list
+li
+:
+hover
+{
+background
+:
+var
+(
+-
+-
+theme
+-
+tab
+-
+toolbar
+-
+background
+)
+;
+}
+.
+result
+-
+list
+li
+.
+selected
+{
+border
+-
+color
+:
+var
+(
+-
+-
+theme
+-
+selection
+-
+background
+)
+;
+}
+.
+result
+-
+list
+.
+small
+li
+.
+selected
+{
 background
 -
 color
@@ -18745,77 +18965,309 @@ var
 -
 theme
 -
-codemirror
--
-gutter
+selection
 -
 background
 )
 ;
-top
+color
 :
-30px
+white
 ;
 }
 .
-symbol
+theme
 -
-modal
+dark
 .
-input
+result
 -
-wrapper
+list
 .
-modal
+small
+li
 .
-input
--
-wrapper
+selected
 {
-display
-:
-flex
-;
-justify
+background
 -
-content
+color
 :
-center
+var
+(
+-
+-
+theme
+-
+body
+-
+background
+)
 ;
 }
 .
-modal
-.
-close
+theme
 -
-btn
+dark
+.
+result
+-
+list
+li
+:
+hover
 {
-padding
+background
 :
-6px
+var
+(
+-
+-
+grey
+-
+70
+)
 ;
 }
 .
-modal
+theme
+-
+dark
+.
+result
+-
+list
+li
+.
+selected
+{
+background
+:
+var
+(
+-
+-
+grey
+-
+70
+)
+;
+}
+.
+result
+-
+list
+li
+.
+title
+{
+line
+-
+height
+:
+1
+.
+5em
+;
+word
+-
+break
+:
+break
+-
+all
+;
+}
+.
+result
+-
+list
+li
+.
+selected
+.
+title
+{
+color
+:
+white
+;
+}
+.
+result
+-
+list
+.
+big
+li
+.
+selected
+.
+title
+{
+color
+:
+var
+(
+-
+-
+theme
+-
+body
+-
+color
+)
+;
+}
+.
+result
+-
+list
+.
+big
+li
+.
+subtitle
+{
+word
+-
+break
+:
+break
+-
+all
+;
+color
+:
+var
+(
+-
+-
+theme
+-
+body
+-
+color
+-
+inactive
+)
+;
+}
+.
+result
+-
+list
+.
+big
+li
+.
+subtitle
+{
+line
+-
+height
+:
+1
+.
+5em
+;
+}
+.
+theme
+-
+dark
+.
+result
+-
+list
+.
+big
+li
+.
+subtitle
+{
+color
+:
+var
+(
+-
+-
+theme
+-
+comment
+-
+alt
+)
+;
+}
+.
+search
+-
+bar
+.
+result
+-
+list
+li
+.
+selected
+.
+subtitle
+{
+color
+:
+white
+;
+}
+.
+search
+-
+bar
 .
 result
 -
 list
 {
-height
-:
-calc
-(
-100
-%
+border
 -
-28px
+bottom
+:
+1px
+solid
+var
+(
+-
+-
+theme
+-
+splitter
+-
+color
 )
 ;
-overflow
+}
+.
+theme
 -
-y
+dark
+.
+result
+-
+list
+{
+background
+-
+color
 :
-auto
+var
+(
+-
+-
+theme
+-
+body
+-
+background
+)
 ;
 }
