Bug 1412890 - Enable ESLint rule mozilla/use-services for toolkit/components/passwordmgr. r=MattN
MozReview-Commit-ID: BNojtj1cAji

UltraBlame original commit: cac71ff2481c20c77090cb508650d2b36175f2e8

--- a/toolkit/components/passwordmgr/test/chrome/test_privbrowsing_perwindowpb.html
+++ b/toolkit/components/passwordmgr/test/chrome/test_privbrowsing_perwindowpb.html
@@ -448,7 +448,9 @@ break
 case
 4
 :
-pwmgr
+Services
+.
+logins
 .
 addLogin
 (
@@ -486,7 +488,9 @@ break
 case
 7
 :
-pwmgr
+Services
+.
+logins
 .
 addLogin
 (
@@ -914,7 +918,9 @@ remove
 (
 )
 ;
-pwmgr
+Services
+.
+logins
 .
 removeLogin
 (
@@ -1210,7 +1216,9 @@ password
 "
 )
 ;
-pwmgr
+Services
+.
+logins
 .
 removeLogin
 (
@@ -1733,43 +1741,6 @@ finish
 ;
 }
 }
-var
-pwmgr
-=
-Cc
-[
-"
-mozilla
-.
-org
-/
-login
--
-manager
-;
-1
-"
-]
-.
-getService
-(
-Ci
-.
-nsILoginManager
-)
-;
-ok
-(
-pwmgr
-!
-=
-null
-"
-Access
-pwmgr
-"
-)
-;
 /
 /
 We
@@ -1828,7 +1799,9 @@ com
 ;
 is
 (
-pwmgr
+Services
+.
+logins
 .
 countLogins
 (
