--- a/toolkit/components/passwordmgr/test/mochitest/test_autofill_password-only.html
+++ b/toolkit/components/passwordmgr/test/mochitest/test_autofill_password-only.html
@@ -196,29 +196,30 @@ Cu
 =
 Components
 ;
-let
-pwmgr
+const
+{
+Services
+}
 =
-Cc
-[
-"
-mozilla
+Cu
 .
-org
-/
-login
--
-manager
-;
-1
-"
-]
-.
-getService
+import
 (
-Ci
+"
+resource
+:
+/
+/
+gre
+/
+modules
+/
+Services
 .
-nsILoginManager
+jsm
+"
+{
+}
 )
 ;
 let
@@ -539,35 +540,45 @@ testpass2C
 "
 )
 ;
-pwmgr
+Services
+.
+logins
 .
 addLogin
 (
 login1A
 )
 ;
-pwmgr
+Services
+.
+logins
 .
 addLogin
 (
 login1B
 )
 ;
-pwmgr
+Services
+.
+logins
 .
 addLogin
 (
 login2A
 )
 ;
-pwmgr
+Services
+.
+logins
 .
 addLogin
 (
 login2B
 )
 ;
-pwmgr
+Services
+.
+logins
 .
 addLogin
 (
@@ -584,35 +595,45 @@ removeLogins
 (
 )
 {
-pwmgr
+Services
+.
+logins
 .
 removeLogin
 (
 login1A
 )
 ;
-pwmgr
+Services
+.
+logins
 .
 removeLogin
 (
 login1B
 )
 ;
-pwmgr
+Services
+.
+logins
 .
 removeLogin
 (
 login2A
 )
 ;
-pwmgr
+Services
+.
+logins
 .
 removeLogin
 (
 login2B
 )
 ;
-pwmgr
+Services
+.
+logins
 .
 removeLogin
 (
