--- a/toolkit/components/passwordmgr/test/mochitest/test_basic_form_html5.html
+++ b/toolkit/components/passwordmgr/test/mochitest/test_basic_form_html5.html
@@ -173,29 +173,30 @@ Cu
 =
 Components
 ;
-let
-pwmgr
+const
+{
+Services
+}
 =
-Cc
-[
-"
-mozilla
+Cu
 .
-org
-/
-login
--
-manager
-;
-1
-"
-]
-.
-getService
+import
 (
-Ci
+"
+resource
+:
+/
+/
+gre
+/
+modules
+/
+Services
 .
-nsILoginManager
+jsm
+"
+{
+}
 )
 ;
 login1
@@ -463,28 +464,36 @@ testpass4
 "
 )
 ;
-pwmgr
+Services
+.
+logins
 .
 addLogin
 (
 login1
 )
 ;
-pwmgr
+Services
+.
+logins
 .
 addLogin
 (
 login2
 )
 ;
-pwmgr
+Services
+.
+logins
 .
 addLogin
 (
 login3
 )
 ;
-pwmgr
+Services
+.
+logins
 .
 addLogin
 (
