--- a/toolkit/components/passwordmgr/test/mochitest/test_basic_form_pwonly.html
+++ b/toolkit/components/passwordmgr/test/mochitest/test_basic_form_pwonly.html
@@ -165,29 +165,30 @@ Cu
 =
 Components
 ;
-var
-pwmgr
+const
+{
+Services
+}
 =
-Cc
-[
-"
-mozilla
+Cu
 .
-org
-/
-login
--
-manager
-;
-1
-"
-]
-.
-getService
+import
 (
-Ci
+"
+resource
+:
+/
+/
+gre
+/
+modules
+/
+Services
 .
-nsILoginManager
+jsm
+"
+{
+}
 )
 ;
 var
@@ -371,14 +372,18 @@ pword
 "
 )
 ;
-pwmgr
+Services
+.
+logins
 .
 addLogin
 (
 pwlogin1
 )
 ;
-pwmgr
+Services
+.
+logins
 .
 addLogin
 (
