--- a/toolkit/components/passwordmgr/test/mochitest/test_prompt.html
+++ b/toolkit/components/passwordmgr/test/mochitest/test_prompt.html
@@ -327,6 +327,11 @@ Ci
 nsIPromptFactory
 )
 ;
+let
+{
+Services
+}
+=
 Cu
 .
 import
@@ -344,6 +349,8 @@ Services
 .
 jsm
 "
+{
+}
 )
 ;
 let
@@ -482,6 +489,32 @@ Cu
 =
 Components
 ;
+const
+{
+Services
+}
+=
+Cu
+.
+import
+(
+"
+resource
+:
+/
+/
+gre
+/
+modules
+/
+Services
+.
+jsm
+"
+{
+}
+)
+;
 var
 login1
 login2A
@@ -489,31 +522,6 @@ login2B
 login2C
 login2D
 login2E
-;
-var
-pwmgr
-=
-Cc
-[
-"
-mozilla
-.
-org
-/
-login
--
-manager
-;
-1
-"
-]
-.
-getService
-(
-Ci
-.
-nsILoginManager
-)
 ;
 login1
 =
@@ -886,42 +894,54 @@ user3pass
 "
 )
 ;
-pwmgr
+Services
+.
+logins
 .
 addLogin
 (
 login1
 )
 ;
-pwmgr
+Services
+.
+logins
 .
 addLogin
 (
 login2A
 )
 ;
-pwmgr
+Services
+.
+logins
 .
 addLogin
 (
 login2B
 )
 ;
-pwmgr
+Services
+.
+logins
 .
 addLogin
 (
 login2C
 )
 ;
-pwmgr
+Services
+.
+logins
 .
 addLogin
 (
 login2D
 )
 ;
-pwmgr
+Services
+.
+logins
 .
 addLogin
 (
