--- a/toolkit/components/passwordmgr/test/mochitest/test_prompt_http.html
+++ b/toolkit/components/passwordmgr/test/mochitest/test_prompt_http.html
@@ -327,6 +327,11 @@ Cu
 =
 Components
 ;
+const
+{
+Services
+}
+=
 Cu
 .
 import
@@ -344,31 +349,8 @@ Services
 .
 jsm
 "
-)
-;
-let
-pwmgr
-=
-Cc
-[
-"
-mozilla
-.
-org
-/
-login
--
-manager
-;
-1
-"
-]
-.
-getService
-(
-Ci
-.
-nsILoginManager
+{
+}
 )
 ;
 let
@@ -805,49 +787,63 @@ httpsPass
 "
 )
 ;
-pwmgr
+Services
+.
+logins
 .
 addLogin
 (
 login3A
 )
 ;
-pwmgr
+Services
+.
+logins
 .
 addLogin
 (
 login3B
 )
 ;
-pwmgr
+Services
+.
+logins
 .
 addLogin
 (
 login4
 )
 ;
-pwmgr
+Services
+.
+logins
 .
 addLogin
 (
 httpUpgradeLogin
 )
 ;
-pwmgr
+Services
+.
+logins
 .
 addLogin
 (
 httpsDowngradeLogin
 )
 ;
-pwmgr
+Services
+.
+logins
 .
 addLogin
 (
 dedupeHttpUpgradeLogin
 )
 ;
-pwmgr
+Services
+.
+logins
 .
 addLogin
 (
