--- a/toolkit/components/passwordmgr/test/mochitest/test_prompt_promptAuth.html
+++ b/toolkit/components/passwordmgr/test/mochitest/test_prompt_promptAuth.html
@@ -404,33 +404,6 @@ nsIAuthPrompt2
 )
 ;
 let
-ioService
-=
-Cc
-[
-"
-mozilla
-.
-org
-/
-network
-/
-io
--
-service
-;
-1
-"
-]
-.
-getService
-(
-Ci
-.
-nsIIOService
-)
-;
-let
 channels
 =
 {
@@ -440,7 +413,9 @@ channels
 .
 channel1
 =
-ioService
+Services
+.
+io
 .
 newChannel2
 (
@@ -486,7 +461,9 @@ channels
 .
 channel2
 =
-ioService
+Services
+.
+io
 .
 newChannel2
 (
@@ -633,50 +610,6 @@ args
 }
 ;
 }
-)
-;
-Cu
-.
-import
-(
-"
-resource
-:
-/
-/
-gre
-/
-modules
-/
-Services
-.
-jsm
-"
-)
-;
-let
-pwmgr
-=
-Cc
-[
-"
-mozilla
-.
-org
-/
-login
--
-manager
-;
-1
-"
-]
-.
-getService
-(
-Ci
-.
-nsILoginManager
 )
 ;
 let
@@ -1058,42 +991,54 @@ user3pass
 "
 )
 ;
-pwmgr
+Services
+.
+logins
 .
 addLogin
 (
 login1
 )
 ;
-pwmgr
+Services
+.
+logins
 .
 addLogin
 (
 login2A
 )
 ;
-pwmgr
+Services
+.
+logins
 .
 addLogin
 (
 login2B
 )
 ;
-pwmgr
+Services
+.
+logins
 .
 addLogin
 (
 login2C
 )
 ;
-pwmgr
+Services
+.
+logins
 .
 addLogin
 (
 login2D
 )
 ;
-pwmgr
+Services
+.
+logins
 .
 addLogin
 (
