--- a/toolkit/components/passwordmgr/test/mochitest/test_prompt_promptAuth_proxy.html
+++ b/toolkit/components/passwordmgr/test/mochitest/test_prompt_promptAuth_proxy.html
@@ -271,58 +271,6 @@ getSystemPrincipal
 )
 ;
 var
-ioService
-=
-Cc
-[
-"
-mozilla
-.
-org
-/
-network
-/
-io
--
-service
-;
-1
-"
-]
-.
-getService
-(
-Ci
-.
-nsIIOService
-)
-;
-var
-prefs
-=
-Cc
-[
-"
-mozilla
-.
-org
-/
-preferences
--
-service
-;
-1
-"
-]
-.
-getService
-(
-Ci
-.
-nsIPrefBranch
-)
-;
-var
 level
 =
 Ci
@@ -498,27 +446,11 @@ pi
 {
 pwmgr
 =
-Cc
-[
-"
-mozilla
+SpecialPowers
 .
-org
-/
-login
--
-manager
-;
-1
-"
-]
+Services
 .
-getService
-(
-Ci
-.
-nsILoginManager
-)
+logins
 ;
 mozproxy
 =
@@ -842,7 +774,11 @@ simplicity
 .
 proxyChannel
 =
-ioService
+SpecialPowers
+.
+Services
+.
+io
 .
 newChannel2
 (
@@ -915,37 +851,6 @@ moz
 proxy
 .
 var
-ios
-=
-SpecialPowers
-.
-Cc
-[
-"
-mozilla
-.
-org
-/
-network
-/
-io
--
-service
-;
-1
-"
-]
-.
-getService
-(
-SpecialPowers
-.
-Ci
-.
-nsIIOService
-)
-;
-var
 pps
 =
 SpecialPowers
@@ -976,7 +881,11 @@ getService
 var
 channel
 =
-ios
+SpecialPowers
+.
+Services
+.
+io
 .
 newChannel2
 (
@@ -1378,6 +1287,10 @@ Enable
 the
 autologin
 pref
+.
+SpecialPowers
+.
+Services
 .
 prefs
 .
@@ -1956,6 +1869,10 @@ nsIAuthInformation
 .
 AUTH_PROXY
 ;
+SpecialPowers
+.
+Services
+.
 prefs
 .
 clearUserPref
