--- a/toolkit/components/passwordmgr/test/mochitest/test_username_focus.html
+++ b/toolkit/components/passwordmgr/test/mochitest/test_username_focus.html
@@ -245,29 +245,30 @@ Cu
 =
 Components
 ;
-let
-pwmgr
+const
+{
+Services
+}
 =
-Cc
-[
-"
-mozilla
+Cu
 .
-org
-/
-login
--
-manager
-;
-1
-"
-]
-.
-getService
+import
 (
-Ci
+"
+resource
+:
+/
+/
+gre
+/
+modules
+/
+Services
 .
-nsILoginManager
+jsm
+"
+{
+}
 )
 ;
 let
@@ -522,21 +523,27 @@ testpass2B
 "
 )
 ;
-pwmgr
+Services
+.
+logins
 .
 addLogin
 (
 login1A
 )
 ;
-pwmgr
+Services
+.
+logins
 .
 addLogin
 (
 login2A
 )
 ;
-pwmgr
+Services
+.
+logins
 .
 addLogin
 (
