--- a/toolkit/components/passwordmgr/test/test_prompt_async.html
+++ b/toolkit/components/passwordmgr/test/test_prompt_async.html
@@ -186,31 +186,8 @@ jsm
 "
 )
 ;
-var
-prefs
-=
-Cc
-[
-"
-mozilla
+Services
 .
-org
-/
-preferences
--
-service
-;
-1
-"
-]
-.
-getService
-(
-Ci
-.
-nsIPrefBranch
-)
-;
 prefs
 .
 setIntPref
@@ -259,6 +236,20 @@ dialogMonitor
 (
 )
 {
+/
+/
+eslint
+-
+disable
+-
+next
+-
+line
+mozilla
+/
+use
+-
+services
 var
 observerService
 =
@@ -502,6 +493,20 @@ shutdown
 (
 )
 {
+/
+/
+eslint
+-
+disable
+-
+next
+-
+line
+mozilla
+/
+use
+-
+services
 var
 observerService
 =
@@ -591,6 +596,20 @@ initLogins
 pi
 )
 {
+/
+/
+eslint
+-
+disable
+-
+next
+-
+line
+mozilla
+/
+use
+-
+services
 pwmgr
 =
 SpecialPowers
