--- a/toolkit/components/passwordmgr/test/test_xhr.html
+++ b/toolkit/components/passwordmgr/test/test_xhr.html
@@ -220,7 +220,6 @@ prompts
 *
 /
 var
-pwmgr
 login1
 login2
 ;
@@ -229,30 +228,6 @@ initLogins
 (
 )
 {
-pwmgr
-=
-Cc
-[
-"
-mozilla
-.
-org
-/
-login
--
-manager
-;
-1
-"
-]
-.
-getService
-(
-Ci
-.
-nsILoginManager
-)
-;
 login1
 =
 Cc
@@ -367,14 +342,18 @@ xhrpass2
 "
 )
 ;
-pwmgr
+Services
+.
+logins
 .
 addLogin
 (
 login1
 )
 ;
-pwmgr
+Services
+.
+logins
 .
 addLogin
 (
@@ -401,14 +380,18 @@ logins
 "
 )
 ;
-pwmgr
+Services
+.
+logins
 .
 removeLogin
 (
 login1
 )
 ;
-pwmgr
+Services
+.
+logins
 .
 removeLogin
 (
