Backed out 1 changesets (bug 1412890) possible ESlint failure r=backout on a CLOSED TREE.
Backed out changeset cac71ff2481c (bug 1412890)

UltraBlame original commit: d86cc075ca5d2155086cccb5e0086573961447e9

--- a/toolkit/components/passwordmgr/test/chrome/test_privbrowsing_perwindowpb.html
+++ b/toolkit/components/passwordmgr/test/chrome/test_privbrowsing_perwindowpb.html
@@ -448,9 +448,7 @@ break
 case
 4
 :
-Services
-.
-logins
+pwmgr
 .
 addLogin
 (
@@ -488,9 +486,7 @@ break
 case
 7
 :
-Services
-.
-logins
+pwmgr
 .
 addLogin
 (
@@ -918,9 +914,7 @@ remove
 (
 )
 ;
-Services
-.
-logins
+pwmgr
 .
 removeLogin
 (
@@ -1216,9 +1210,7 @@ password
 "
 )
 ;
-Services
-.
-logins
+pwmgr
 .
 removeLogin
 (
@@ -1741,6 +1733,43 @@ finish
 ;
 }
 }
+var
+pwmgr
+=
+Cc
+[
+"
+mozilla
+.
+org
+/
+login
+-
+manager
+;
+1
+"
+]
+.
+getService
+(
+Ci
+.
+nsILoginManager
+)
+;
+ok
+(
+pwmgr
+!
+=
+null
+"
+Access
+pwmgr
+"
+)
+;
 /
 /
 We
@@ -1799,9 +1828,7 @@ com
 ;
 is
 (
-Services
-.
-logins
+pwmgr
 .
 countLogins
 (
