--- a/toolkit/components/passwordmgr/test/mochitest/test_autofill_password-only.html
+++ b/toolkit/components/passwordmgr/test/mochitest/test_autofill_password-only.html
@@ -196,30 +196,29 @@ Cu
 =
 Components
 ;
-const
-{
-Services
-}
+let
+pwmgr
 =
-Cu
+Cc
+[
+"
+mozilla
 .
-import
+org
+/
+login
+-
+manager
+;
+1
+"
+]
+.
+getService
 (
-"
-resource
-:
-/
-/
-gre
-/
-modules
-/
-Services
+Ci
 .
-jsm
-"
-{
-}
+nsILoginManager
 )
 ;
 let
@@ -540,45 +539,35 @@ testpass2C
 "
 )
 ;
-Services
-.
-logins
+pwmgr
 .
 addLogin
 (
 login1A
 )
 ;
-Services
-.
-logins
+pwmgr
 .
 addLogin
 (
 login1B
 )
 ;
-Services
-.
-logins
+pwmgr
 .
 addLogin
 (
 login2A
 )
 ;
-Services
-.
-logins
+pwmgr
 .
 addLogin
 (
 login2B
 )
 ;
-Services
-.
-logins
+pwmgr
 .
 addLogin
 (
@@ -595,45 +584,35 @@ removeLogins
 (
 )
 {
-Services
-.
-logins
+pwmgr
 .
 removeLogin
 (
 login1A
 )
 ;
-Services
-.
-logins
+pwmgr
 .
 removeLogin
 (
 login1B
 )
 ;
-Services
-.
-logins
+pwmgr
 .
 removeLogin
 (
 login2A
 )
 ;
-Services
-.
-logins
+pwmgr
 .
 removeLogin
 (
 login2B
 )
 ;
-Services
-.
-logins
+pwmgr
 .
 removeLogin
 (
