--- a/toolkit/components/passwordmgr/test/mochitest/test_basic_form_html5.html
+++ b/toolkit/components/passwordmgr/test/mochitest/test_basic_form_html5.html
@@ -173,30 +173,29 @@ Cu
 =
 Components
 ;
-const
-{
-Services
-}
+let
+pwmgr
 =
-Cu
+Cc
+[
+"
+mozilla
 .
-import
+org
+/
+login
+-
+manager
+;
+1
+"
+]
+.
+getService
 (
-"
-resource
-:
-/
-/
-gre
-/
-modules
-/
-Services
+Ci
 .
-jsm
-"
-{
-}
+nsILoginManager
 )
 ;
 login1
@@ -464,36 +463,28 @@ testpass4
 "
 )
 ;
-Services
-.
-logins
+pwmgr
 .
 addLogin
 (
 login1
 )
 ;
-Services
-.
-logins
+pwmgr
 .
 addLogin
 (
 login2
 )
 ;
-Services
-.
-logins
+pwmgr
 .
 addLogin
 (
 login3
 )
 ;
-Services
-.
-logins
+pwmgr
 .
 addLogin
 (
