--- a/toolkit/components/passwordmgr/test/mochitest/test_basic_form_pwonly.html
+++ b/toolkit/components/passwordmgr/test/mochitest/test_basic_form_pwonly.html
@@ -165,30 +165,29 @@ Cu
 =
 Components
 ;
-const
-{
-Services
-}
+var
+pwmgr
 =
-Cu
+Cc
+[
+"
+mozilla
 .
-import
+org
+/
+login
+-
+manager
+;
+1
+"
+]
+.
+getService
 (
-"
-resource
-:
-/
-/
-gre
-/
-modules
-/
-Services
+Ci
 .
-jsm
-"
-{
-}
+nsILoginManager
 )
 ;
 var
@@ -372,18 +371,14 @@ pword
 "
 )
 ;
-Services
-.
-logins
+pwmgr
 .
 addLogin
 (
 pwlogin1
 )
 ;
-Services
-.
-logins
+pwmgr
 .
 addLogin
 (
