--- a/toolkit/components/passwordmgr/test/mochitest/test_prompt.html
+++ b/toolkit/components/passwordmgr/test/mochitest/test_prompt.html
@@ -327,11 +327,6 @@ Ci
 nsIPromptFactory
 )
 ;
-let
-{
-Services
-}
-=
 Cu
 .
 import
@@ -349,8 +344,6 @@ Services
 .
 jsm
 "
-{
-}
 )
 ;
 let
@@ -489,32 +482,6 @@ Cu
 =
 Components
 ;
-const
-{
-Services
-}
-=
-Cu
-.
-import
-(
-"
-resource
-:
-/
-/
-gre
-/
-modules
-/
-Services
-.
-jsm
-"
-{
-}
-)
-;
 var
 login1
 login2A
@@ -522,6 +489,31 @@ login2B
 login2C
 login2D
 login2E
+;
+var
+pwmgr
+=
+Cc
+[
+"
+mozilla
+.
+org
+/
+login
+-
+manager
+;
+1
+"
+]
+.
+getService
+(
+Ci
+.
+nsILoginManager
+)
 ;
 login1
 =
@@ -894,54 +886,42 @@ user3pass
 "
 )
 ;
-Services
-.
-logins
+pwmgr
 .
 addLogin
 (
 login1
 )
 ;
-Services
-.
-logins
+pwmgr
 .
 addLogin
 (
 login2A
 )
 ;
-Services
-.
-logins
+pwmgr
 .
 addLogin
 (
 login2B
 )
 ;
-Services
-.
-logins
+pwmgr
 .
 addLogin
 (
 login2C
 )
 ;
-Services
-.
-logins
+pwmgr
 .
 addLogin
 (
 login2D
 )
 ;
-Services
-.
-logins
+pwmgr
 .
 addLogin
 (
