--- a/toolkit/components/passwordmgr/test/mochitest/test_prompt_http.html
+++ b/toolkit/components/passwordmgr/test/mochitest/test_prompt_http.html
@@ -327,11 +327,6 @@ Cu
 =
 Components
 ;
-const
-{
-Services
-}
-=
 Cu
 .
 import
@@ -349,8 +344,31 @@ Services
 .
 jsm
 "
-{
-}
+)
+;
+let
+pwmgr
+=
+Cc
+[
+"
+mozilla
+.
+org
+/
+login
+-
+manager
+;
+1
+"
+]
+.
+getService
+(
+Ci
+.
+nsILoginManager
 )
 ;
 let
@@ -787,63 +805,49 @@ httpsPass
 "
 )
 ;
-Services
-.
-logins
+pwmgr
 .
 addLogin
 (
 login3A
 )
 ;
-Services
-.
-logins
+pwmgr
 .
 addLogin
 (
 login3B
 )
 ;
-Services
-.
-logins
+pwmgr
 .
 addLogin
 (
 login4
 )
 ;
-Services
-.
-logins
+pwmgr
 .
 addLogin
 (
 httpUpgradeLogin
 )
 ;
-Services
-.
-logins
+pwmgr
 .
 addLogin
 (
 httpsDowngradeLogin
 )
 ;
-Services
-.
-logins
+pwmgr
 .
 addLogin
 (
 dedupeHttpUpgradeLogin
 )
 ;
-Services
-.
-logins
+pwmgr
 .
 addLogin
 (
