--- a/toolkit/components/passwordmgr/test/mochitest/test_prompt_promptAuth.html
+++ b/toolkit/components/passwordmgr/test/mochitest/test_prompt_promptAuth.html
@@ -404,6 +404,33 @@ nsIAuthPrompt2
 )
 ;
 let
+ioService
+=
+Cc
+[
+"
+mozilla
+.
+org
+/
+network
+/
+io
+-
+service
+;
+1
+"
+]
+.
+getService
+(
+Ci
+.
+nsIIOService
+)
+;
+let
 channels
 =
 {
@@ -413,9 +440,7 @@ channels
 .
 channel1
 =
-Services
-.
-io
+ioService
 .
 newChannel2
 (
@@ -461,9 +486,7 @@ channels
 .
 channel2
 =
-Services
-.
-io
+ioService
 .
 newChannel2
 (
@@ -610,6 +633,50 @@ args
 }
 ;
 }
+)
+;
+Cu
+.
+import
+(
+"
+resource
+:
+/
+/
+gre
+/
+modules
+/
+Services
+.
+jsm
+"
+)
+;
+let
+pwmgr
+=
+Cc
+[
+"
+mozilla
+.
+org
+/
+login
+-
+manager
+;
+1
+"
+]
+.
+getService
+(
+Ci
+.
+nsILoginManager
 )
 ;
 let
@@ -991,54 +1058,42 @@ user3pass
 "
 )
 ;
-Services
-.
-logins
+pwmgr
 .
 addLogin
 (
 login1
 )
 ;
-Services
-.
-logins
+pwmgr
 .
 addLogin
 (
 login2A
 )
 ;
-Services
-.
-logins
+pwmgr
 .
 addLogin
 (
 login2B
 )
 ;
-Services
-.
-logins
+pwmgr
 .
 addLogin
 (
 login2C
 )
 ;
-Services
-.
-logins
+pwmgr
 .
 addLogin
 (
 login2D
 )
 ;
-Services
-.
-logins
+pwmgr
 .
 addLogin
 (
