--- a/toolkit/components/passwordmgr/test/mochitest/test_prompt_promptAuth_proxy.html
+++ b/toolkit/components/passwordmgr/test/mochitest/test_prompt_promptAuth_proxy.html
@@ -271,6 +271,58 @@ getSystemPrincipal
 )
 ;
 var
+ioService
+=
+Cc
+[
+"
+mozilla
+.
+org
+/
+network
+/
+io
+-
+service
+;
+1
+"
+]
+.
+getService
+(
+Ci
+.
+nsIIOService
+)
+;
+var
+prefs
+=
+Cc
+[
+"
+mozilla
+.
+org
+/
+preferences
+-
+service
+;
+1
+"
+]
+.
+getService
+(
+Ci
+.
+nsIPrefBranch
+)
+;
+var
 level
 =
 Ci
@@ -446,11 +498,27 @@ pi
 {
 pwmgr
 =
-SpecialPowers
+Cc
+[
+"
+mozilla
 .
-Services
+org
+/
+login
+-
+manager
+;
+1
+"
+]
 .
-logins
+getService
+(
+Ci
+.
+nsILoginManager
+)
 ;
 mozproxy
 =
@@ -774,11 +842,7 @@ simplicity
 .
 proxyChannel
 =
-SpecialPowers
-.
-Services
-.
-io
+ioService
 .
 newChannel2
 (
@@ -851,6 +915,37 @@ moz
 proxy
 .
 var
+ios
+=
+SpecialPowers
+.
+Cc
+[
+"
+mozilla
+.
+org
+/
+network
+/
+io
+-
+service
+;
+1
+"
+]
+.
+getService
+(
+SpecialPowers
+.
+Ci
+.
+nsIIOService
+)
+;
+var
 pps
 =
 SpecialPowers
@@ -881,11 +976,7 @@ getService
 var
 channel
 =
-SpecialPowers
-.
-Services
-.
-io
+ios
 .
 newChannel2
 (
@@ -1287,10 +1378,6 @@ Enable
 the
 autologin
 pref
-.
-SpecialPowers
-.
-Services
 .
 prefs
 .
@@ -1869,10 +1956,6 @@ nsIAuthInformation
 .
 AUTH_PROXY
 ;
-SpecialPowers
-.
-Services
-.
 prefs
 .
 clearUserPref
