--- a/toolkit/components/passwordmgr/test/mochitest/test_username_focus.html
+++ b/toolkit/components/passwordmgr/test/mochitest/test_username_focus.html
@@ -245,30 +245,29 @@ Cu
 =
 Components
 ;
-const
-{
-Services
-}
+let
+pwmgr
 =
-Cu
+Cc
+[
+"
+mozilla
 .
-import
+org
+/
+login
+-
+manager
+;
+1
+"
+]
+.
+getService
 (
-"
-resource
-:
-/
-/
-gre
-/
-modules
-/
-Services
+Ci
 .
-jsm
-"
-{
-}
+nsILoginManager
 )
 ;
 let
@@ -523,27 +522,21 @@ testpass2B
 "
 )
 ;
-Services
-.
-logins
+pwmgr
 .
 addLogin
 (
 login1A
 )
 ;
-Services
-.
-logins
+pwmgr
 .
 addLogin
 (
 login2A
 )
 ;
-Services
-.
-logins
+pwmgr
 .
 addLogin
 (
