--- a/toolkit/components/passwordmgr/test/test_prompt_async.html
+++ b/toolkit/components/passwordmgr/test/test_prompt_async.html
@@ -186,8 +186,31 @@ jsm
 "
 )
 ;
-Services
+var
+prefs
+=
+Cc
+[
+"
+mozilla
 .
+org
+/
+preferences
+-
+service
+;
+1
+"
+]
+.
+getService
+(
+Ci
+.
+nsIPrefBranch
+)
+;
 prefs
 .
 setIntPref
@@ -236,20 +259,6 @@ dialogMonitor
 (
 )
 {
-/
-/
-eslint
--
-disable
--
-next
--
-line
-mozilla
-/
-use
--
-services
 var
 observerService
 =
@@ -493,20 +502,6 @@ shutdown
 (
 )
 {
-/
-/
-eslint
--
-disable
--
-next
--
-line
-mozilla
-/
-use
--
-services
 var
 observerService
 =
@@ -596,20 +591,6 @@ initLogins
 pi
 )
 {
-/
-/
-eslint
--
-disable
--
-next
--
-line
-mozilla
-/
-use
--
-services
 pwmgr
 =
 SpecialPowers
