--- a/toolkit/components/passwordmgr/test/test_xhr.html
+++ b/toolkit/components/passwordmgr/test/test_xhr.html
@@ -220,6 +220,7 @@ prompts
 *
 /
 var
+pwmgr
 login1
 login2
 ;
@@ -228,6 +229,30 @@ initLogins
 (
 )
 {
+pwmgr
+=
+Cc
+[
+"
+mozilla
+.
+org
+/
+login
+-
+manager
+;
+1
+"
+]
+.
+getService
+(
+Ci
+.
+nsILoginManager
+)
+;
 login1
 =
 Cc
@@ -342,18 +367,14 @@ xhrpass2
 "
 )
 ;
-Services
-.
-logins
+pwmgr
 .
 addLogin
 (
 login1
 )
 ;
-Services
-.
-logins
+pwmgr
 .
 addLogin
 (
@@ -380,18 +401,14 @@ logins
 "
 )
 ;
-Services
-.
-logins
+pwmgr
 .
 removeLogin
 (
 login1
 )
 ;
-Services
-.
-logins
+pwmgr
 .
 removeLogin
 (
