--- a/toolkit/components/passwordmgr/test/test_xml_load.html
+++ b/toolkit/components/passwordmgr/test/test_xml_load.html
@@ -220,6 +220,7 @@ prompts
 *
 /
 var
+pwmgr
 login1
 login2
 ;
@@ -228,6 +229,32 @@ initLogins
 (
 )
 {
+pwmgr
+=
+SpecialPowers
+.
+Cc
+[
+"
+mozilla
+.
+org
+/
+login
+-
+manager
+;
+1
+"
+]
+.
+getService
+(
+Ci
+.
+nsILoginManager
+)
+;
 login1
 =
 SpecialPowers
@@ -346,18 +373,14 @@ xmlpass2
 "
 )
 ;
-Services
-.
-logins
+pwmgr
 .
 addLogin
 (
 login1
 )
 ;
-Services
-.
-logins
+pwmgr
 .
 addLogin
 (
