--- a/devtools/shim/aboutdevtools/aboutdevtools.css
+++ b/devtools/shim/aboutdevtools/aboutdevtools.css
@@ -45,6 +45,21 @@ white
 ffffff
 ;
 }
+html
+body
+{
+min
+-
+width
+:
+600px
+;
+height
+:
+100
+%
+;
+}
 p
 {
 line
@@ -61,7 +76,8 @@ box
 {
 width
 :
-100vw
+100
+%
 ;
 max
 -
@@ -83,10 +99,26 @@ height
 :
 400px
 ;
+flex
+-
+shrink
+:
+0
+;
 }
 .
 wrapper
 {
+width
+:
+100
+%
+;
+height
+:
+100
+%
+;
 display
 :
 flex
@@ -97,20 +129,11 @@ direction
 :
 column
 ;
-position
-:
-absolute
-;
 align
 -
 items
 :
 center
-;
-width
-:
-100
-%
 ;
 }
 .
@@ -121,6 +144,11 @@ pane
 width
 :
 360px
+;
+height
+:
+100
+%
 ;
 background
 -
@@ -156,11 +184,6 @@ repeat
 no
 -
 repeat
-;
-height
-:
-100
-%
 ;
 flex
 -
@@ -346,9 +369,7 @@ blue
 ;
 }
 .
-installpage
--
-link
+external
 :
 :
 after
@@ -632,5 +653,198 @@ true
 display
 :
 none
+;
+}
+footer
+{
+display
+:
+flex
+;
+align
+-
+items
+:
+center
+;
+justify
+-
+content
+:
+center
+;
+width
+:
+100
+%
+;
+min
+-
+height
+:
+300px
+;
+flex
+-
+grow
+:
+1
+;
+color
+:
+var
+(
+-
+-
+white
+)
+;
+background
+:
+linear
+-
+gradient
+(
+0
+var
+(
+-
+-
+blue
+-
+60
+)
+var
+(
+-
+-
+blue
+-
+80
+)
+)
+;
+}
+.
+dev
+-
+edition
+-
+logo
+{
+flex
+-
+shrink
+:
+0
+;
+width
+:
+165px
+;
+margin
+:
+20px
+50px
+0
+0
+;
+}
+.
+footer
+-
+message
+{
+max
+-
+width
+:
+460px
+;
+}
+.
+footer
+-
+message
+-
+title
+{
+color
+:
+var
+(
+-
+-
+white
+)
+;
+}
+.
+footer
+-
+link
+{
+display
+:
+block
+;
+margin
+-
+top
+:
+10px
+;
+-
+moz
+-
+context
+-
+properties
+:
+fill
+;
+fill
+:
+var
+(
+-
+-
+white
+)
+;
+}
+.
+footer
+-
+link
+.
+footer
+-
+link
+:
+hover
+.
+footer
+-
+link
+:
+visited
+.
+footer
+-
+link
+:
+hover
+:
+active
+{
+color
+:
+var
+(
+-
+-
+white
+)
 ;
 }
