--- a/browser/themes/shared/toolbarbuttons.inc.css
+++ b/browser/themes/shared/toolbarbuttons.inc.css
@@ -17,6 +17,16 @@ duration
 -
 toolbarbutton
 -
+outer
+-
+padding
+:
+2px
+;
+-
+-
+toolbarbutton
+-
 inner
 -
 padding
@@ -154,11 +164,11 @@ compact
 -
 toolbarbutton
 -
-inner
+outer
 -
 padding
 :
-5px
+1px
 ;
 }
 :
@@ -731,7 +741,16 @@ margin
 padding
 :
 0
-2px
+var
+(
+-
+-
+toolbarbutton
+-
+outer
+-
+padding
+)
 ;
 -
 moz
@@ -743,6 +762,17 @@ pack
 center
 ;
 }
+:
+root
+:
+not
+(
+[
+uidensity
+=
+compact
+]
+)
 #
 PanelUI
 -
@@ -1743,9 +1773,7 @@ inline
 -
 start
 :
-5px
-!
-important
+3px
 ;
 padding
 -
@@ -1907,11 +1935,11 @@ radius
 ;
 width
 :
-32px
+34px
 ;
 padding
 :
-7px
+8px
 ;
 transition
 -
@@ -1960,6 +1988,14 @@ top
 padding
 -
 bottom
+:
+1px
+;
+padding
+-
+inline
+-
+start
 :
 1px
 ;
