Bug 1412890 - Enable ESLint rule mozilla/use-services for toolkit/components/passwordmgr. r=MattN
MozReview-Commit-ID: BNojtj1cAji

UltraBlame original commit: da3d20251959d8c60a2c646253d8c32d137623b0

--- a/toolkit/components/passwordmgr/test/test_master_password.html
+++ b/toolkit/components/passwordmgr/test/test_master_password.html
@@ -172,29 +172,9 @@ pwmgr
 =
 SpecialPowers
 .
-Cc
-[
-"
-mozilla
+Services
 .
-org
-/
-login
--
-manager
-;
-1
-"
-]
-.
-getService
-(
-SpecialPowers
-.
-Ci
-.
-nsILoginManager
-)
+logins
 ;
 var
 pwcrypt
