--- a/toolkit/components/passwordmgr/test/test_prompt_async.html
+++ b/toolkit/components/passwordmgr/test/test_prompt_async.html
@@ -186,31 +186,10 @@ jsm
 "
 )
 ;
-var
-prefs
-=
-Cc
-[
-"
-mozilla
+SpecialPowers
 .
-org
-/
-preferences
--
-service
-;
-1
-"
-]
+Services
 .
-getService
-(
-Ci
-.
-nsIPrefBranch
-)
-;
 prefs
 .
 setIntPref
@@ -259,6 +238,20 @@ dialogMonitor
 (
 )
 {
+/
+/
+eslint
+-
+disable
+-
+next
+-
+line
+mozilla
+/
+use
+-
+services
 var
 observerService
 =
@@ -502,6 +495,20 @@ shutdown
 (
 )
 {
+/
+/
+eslint
+-
+disable
+-
+next
+-
+line
+mozilla
+/
+use
+-
+services
 var
 observerService
 =
@@ -595,27 +602,9 @@ pwmgr
 =
 SpecialPowers
 .
-Cc
-[
-"
-mozilla
+Services
 .
-org
-/
-login
--
-manager
-;
-1
-"
-]
-.
-getService
-(
-Ci
-.
-nsILoginManager
-)
+logins
 ;
 function
 addLogin
