--- a/toolkit/components/passwordmgr/test/test_xml_load.html
+++ b/toolkit/components/passwordmgr/test/test_xml_load.html
@@ -220,7 +220,6 @@ prompts
 *
 /
 var
-pwmgr
 login1
 login2
 ;
@@ -229,32 +228,6 @@ initLogins
 (
 )
 {
-pwmgr
-=
-SpecialPowers
-.
-Cc
-[
-"
-mozilla
-.
-org
-/
-login
--
-manager
-;
-1
-"
-]
-.
-getService
-(
-Ci
-.
-nsILoginManager
-)
-;
 login1
 =
 SpecialPowers
@@ -373,14 +346,22 @@ xmlpass2
 "
 )
 ;
-pwmgr
+SpecialPowers
+.
+Services
+.
+logins
 .
 addLogin
 (
 login1
 )
 ;
-pwmgr
+SpecialPowers
+.
+Services
+.
+logins
 .
 addLogin
 (
