--- a/browser/base/content/browser.css
+++ b/browser/base/content/browser.css
@@ -2429,6 +2429,124 @@ ease
 out
 ;
 }
+toolbaritem
+[
+sdkstylewidget
+=
+"
+true
+"
+]
+>
+toolbarbutton
+toolbarpaletteitem
+>
+toolbaritem
+[
+sdkstylewidget
+=
+"
+true
+"
+]
+>
+iframe
+toolbarpaletteitem
+>
+toolbaritem
+[
+sdkstylewidget
+=
+"
+true
+"
+]
+>
+.
+toolbarbutton
+-
+text
+{
+display
+:
+none
+;
+}
+toolbarpaletteitem
+:
+-
+moz
+-
+any
+(
+[
+place
+=
+"
+palette
+"
+]
+[
+place
+=
+"
+panel
+"
+]
+)
+>
+toolbaritem
+[
+sdkstylewidget
+=
+"
+true
+"
+]
+>
+toolbarbutton
+{
+display
+:
+-
+moz
+-
+box
+;
+}
+toolbarpaletteitem
+>
+toolbaritem
+[
+sdkstylewidget
+=
+"
+true
+"
+]
+[
+cui
+-
+areatype
+=
+"
+toolbar
+"
+]
+>
+.
+toolbarbutton
+-
+text
+{
+display
+:
+-
+moz
+-
+box
+;
+}
 .
 webextension
 -
@@ -7438,6 +7556,36 @@ none
 }
 %
 endif
+#
+PanelUI
+-
+contents
+>
+.
+panel
+-
+customization
+-
+placeholder
+>
+.
+panel
+-
+customization
+-
+placeholder
+-
+child
+{
+list
+-
+style
+-
+image
+:
+none
+;
+}
 media
 (
 resolution
