Bug 1412311 - DevTools Shared Components to ES6 classes r=nchevobbe
In devtools/client/shared/components/tree/TreeView.js I have had to leave defaultProps outside the getter as a temporary workaround for bug 1413167.

MozReview-Commit-ID: 1yaxqFnC92p

UltraBlame original commit: 3fa859a78370f2df0639a63ba7accad45ff7f60a

--- a/devtools/client/shared/components/test/mochitest/test_tabs_menu.html
+++ b/devtools/client/shared/components/test/mochitest/test_tabs_menu.html
@@ -429,7 +429,11 @@ dom
 )
 ;
 const
-React
+{
+Component
+createFactory
+DOM
+}
 =
 browserRequire
 (
@@ -449,8 +453,6 @@ react
 const
 Tabbar
 =
-React
-.
 createFactory
 (
 browserRequire
@@ -588,32 +590,16 @@ tabbar
 tabBarBox
 )
 ;
-/
-/
-Test
-panel
-.
-let
-TabPanel
-=
-React
-.
-createFactory
-(
-React
-.
-createClass
-(
+class
+TabPanelClass
+extends
+Component
 {
 render
-:
-function
 (
 )
 {
 return
-React
-.
 DOM
 .
 div
@@ -627,7 +613,17 @@ content
 ;
 }
 }
-)
+/
+/
+Test
+panel
+.
+let
+TabPanel
+=
+createFactory
+(
+TabPanelClass
 )
 ;
 /
